--- a/app/views/layouts/backoffice.html.erb
+++ b/app/views/layouts/backoffice.html.erb
@@ -181,6 +181,6 @@
         </footer>
     </div>
    </div>
-   <%= javascript_include_tag 'application'  %>
+   <%= javascript_include_tag 'backoffice/application'  %>
   </body>
 </html>
