validação nos acessos de usuarios por site

--- a/app/views/backoffice/config/about/index.html.erb
+++ b/app/views/backoffice/config/about/index.html.erb
@@ -13,7 +13,7 @@
             <tr>
               <th>#</th>
               <th>Descrição</th>
-              <th>Site</th>
+              <!-- <th>Site</th> -->
               <th style="text-align: center;">Ações</th>
             </tr>
           </thead>
@@ -22,7 +22,7 @@
               <tr>
                 <th scope="row"><%= about.id %></th>
                 <td><%= about.description %></td>
-                <td><%= about.site.name %></td>
+                <!-- <td><%= about.site.name %></td> -->
               <td style="width: 130px; text-align: center;">
                 	<%= link_to edit_backoffice_config_about_path(about), class: "btn btn-primary" do %>
                       <i class="icon-new-file"></i>
