--- a/app/views/backoffice/config/title/index.html.erb
+++ b/app/views/backoffice/config/title/index.html.erb
@@ -17,7 +17,7 @@
                   <th>Titulo Principal</th>
                   <th>Texto Principal</th>
                   <th>Descrição para Favoritos</th>
-                  <th>Site</th>
+                  <!-- <th>Site</th> -->
                   <th>Logo do site</th>
                   <th style="text-align: center;">Ações</th>
                 </tr>
@@ -31,7 +31,7 @@
 	                  <td><%= titulo.subtitle %></td>
 	                  <td><%= titulo.text %></td>
 	                  <td><%= titulo.bestsellername %></td>
-                    <td><%= titulo.site.name %></td>
+                    <!--<td><%= titulo.site.name %></td>-->
                     <td><img src="<%= titulo.photologo %>" style="height: 3.8rem;" /></td>
 	                  <td style="width: 130px; text-align: center;">
 	                  	<%= link_to edit_backoffice_config_title_path(titulo), class: "btn btn-primary" do %>
