--- a/app/views/backoffice/contact/address/index.html.erb
+++ b/app/views/backoffice/contact/address/index.html.erb
@@ -19,7 +19,7 @@
                   <th>Cidade</th>
                   <th>Estado</th>
                   <th>CEP</th>
-                  <th>Site</th>
+                  <!--<th>Site</th>-->
                   <th style="text-align: center;">Ações</th>
                 </tr>
               </thead>
@@ -33,7 +33,7 @@
 	                  <td><%= address.city %></td>
 	                  <td><%= address.state %></td>
 	                  <td><%= address.zipcode %></td>
-                      <td><%= address.site.name %></td>
+                    <!--<td><%= address.site.name %></td>-->
 	                  <td style="width: 130px; text-align: center;">
 	                  	<%= link_to edit_backoffice_contact_address_path(address), class: "btn btn-primary" do %>
 	                        <i class="icon-new-file"></i>
