--- a/app/views/backoffice/contact/phone/index.html.erb
+++ b/app/views/backoffice/contact/phone/index.html.erb
@@ -15,7 +15,7 @@
                   <th>#</th>
                   <th>Nome</th>
                   <th>Telefone</th>
-                  <th>Site</th>
+                  <!--<th>Site</th>-->
                   <th style="text-align: center;">Ações</th>
                 </tr>
               </thead>
@@ -25,7 +25,7 @@
 	                  <th scope="row"><%= phone.id %></th>
 	                  <td><%= phone.name %></td>
 	                  <td><%= phone.phone %></td>
-                    <td><%= phone.site.name %></td>
+                    <!--<td><%= phone.site.name %></td>-->
 	                  <td style="width: 130px; text-align: center;">
 	                  	<%= link_to edit_backoffice_contact_phone_path(phone), class: "btn btn-primary" do %>
 	                        <i class="icon-new-file"></i>
