--- a/app/views/backoffice/product/label/index.html.erb
+++ b/app/views/backoffice/product/label/index.html.erb
@@ -15,7 +15,7 @@
                   <th>#</th>
                   <th>Nome</th>
                   <th>Descrição</th>
-                  <th>Site</th>
+                  <!--<th>Site</th>-->
                   <th style="text-align: center;">Ações</th>
                 </tr>
               </thead>
@@ -28,7 +28,7 @@
                       </div>
                     </td>
 	                  <td><%= label.description %></td>
-	                  <td><%= label.site.name %></td>
+	                  <!--<td><%= label.site.name %></td>-->
 	                  <td style="width: 130px; text-align: center;">
 	                  	<%= link_to edit_backoffice_product_label_path(label), class: "btn btn-primary" do %>
 	                        <i class="icon-new-file"></i>
