--- a/app/views/backoffice/product/product/edit.html.erb
+++ b/app/views/backoffice/product/product/edit.html.erb
@@ -43,11 +43,14 @@
             <%= t.collection_select( :label_id, @labels, :id, :name, 
             {:include_blank=>true}, {:class=> 'form-control mb-3 mb-3'}) %>
         </div>
-        <div class="form-group">
-            <%= t.label "Site", class: "form-control-label" %>   
-            <%= t.collection_select( :site_id, @sites, :id, :name, 
-            {:include_blank=>false}, {:class=> 'form-control mb-3 mb-3'}) %>
-        </div>
+        <div class="form-group" style="display: none">
+            <%= t.text_field :site_id,  :value => current_user.site_id %>
+          </div>
+         <!-- <div class="form-group">
+              <%= t.label "Site", class: "form-control-label" %>   
+              <%= t.collection_select( :site_id, @sites, :id, :name, 
+              {:include_blank=>false}, {:class=> 'form-control mb-3 mb-3'}) %>
+            </div> -->
         <div class="form-group">
          <div class="i-checks">
             <%= t.check_box(:bestseller, { class: "checkbox-template" }, "highlight", "not_highlight") %>
