--- a/app/views/backoffice/product/product/index.html.erb
+++ b/app/views/backoffice/product/product/index.html.erb
@@ -45,7 +45,7 @@
                   <th>Destacar</th>
                   <th>Categoria</th>
                   <th>Rótulo</th>
-                  <th>Site</th>
+                  <!--<th>Site</th>-->
                   <th style="text-align: center;">Ações</th>
                 </tr>
               </thead>
@@ -60,7 +60,7 @@
 	                  <td><%= produto.bestseller_i18n%></td>
 	                  <td><%= produto.category.description %></td>
 	                  <td><%= produto.label.name %></td>
-	                  <td><%= produto.site.name %></td>
+	                  <!--<td><%= produto.site.name %></td>-->
 	                  <td style="width: 130px; text-align: center;">
 	                  	<%= link_to edit_backoffice_product_product_path(produto), class: "btn btn-primary" do %>
 	                        <i class="icon-new-file"></i>
