--- a/app/views/backoffice/config/about/edit.html.erb
+++ b/app/views/backoffice/config/about/edit.html.erb
@@ -3,6 +3,20 @@
     <h2 class="h5 no-margin-bottom">Alterar Informações sobre a lanchonete</h2>
   </div>
 </div>
+
+<% if @about.errors.any? %>
+    <div class="alert alert-danger alert-dismissable">
+    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+
+    <ul>
+        <% @about.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+        <% end %>
+    </ul>
+
+    </div>
+<% end %>
+
 <div class="col-lg-12">
 	<div class="block">
 	  <div class="block-body">
@@ -11,11 +25,14 @@
 	        <%= t.label "Descrição", class: "form-control-label" %>
             <%= t.text_area :description, class:"form-control", rows:"10" %>
 	      </div>
-	      <div class="form-group">
+          <div class="form-group" style="display: none">
+            <%= t.text_field :site_id,  :value => current_user.site_id %>
+	      </div>
+	     <!-- <div class="form-group">
             <%= t.label "Site", class: "form-control-label" %>   
             <%= t.collection_select( :site_id, @sites, :id, :name, 
             {:include_blank=>false}, {:class=> 'form-control mb-3 mb-3'}) %>
-          </div>
+          </div> -->
 	      <div class="form-group">       
 	        <%= t.submit "Salvar", class: "btn btn-primary" %>
 	      </div>
