--- a/app/views/backoffice/config/about/new.html.erb
+++ b/app/views/backoffice/config/about/new.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
   <div class="container-fluid">
-    <h2 class="h5 no-margin-bottom">Novas informações da lanchonete</h2>
+    <h2 class="h5 no-margin-bottom">Informações da lanchonete</h2>
   </div>
 </div>
 
@@ -25,11 +25,14 @@
             <%= t.label "Descrição", class: "form-control-label" %>
             <%= t.text_area :description, class:"form-control", rows:"10" %>
 	      </div>
-        <div class="form-group">
+            <div class="form-group" style="display: none">
+            <%= t.text_field :site_id,  :value => current_user.site_id %>
+          </div>
+         <!-- <div class="form-group">
             <%= t.label "Site", class: "form-control-label" %>   
             <%= t.collection_select( :site_id, @sites, :id, :name, 
             {:include_blank=>false}, {:class=> 'form-control mb-3 mb-3'}) %>
-        </div>
+          </div> -->
 	      <div class="form-group">       
 	        <%= t.submit "Salvar", class: "btn btn-primary" %>
 	      </div>
