--- a/app/views/backoffice/config/title/edit.html.erb
+++ b/app/views/backoffice/config/title/edit.html.erb
@@ -31,11 +31,14 @@
 	        <%= t.label "Texto Principal", class: "form-control-label" %>
             <%= t.text_area :text, class:"form-control", rows:"5" %>
 	      </div>
-	      <div class="form-group">
+	      <div class="form-group" style="display: none">
+            <%= t.text_field :site_id,  :value => current_user.site_id %>
+	      </div>
+	     <!-- <div class="form-group">
             <%= t.label "Site", class: "form-control-label" %>   
             <%= t.collection_select( :site_id, @sites, :id, :name, 
             {:include_blank=>false}, {:class=> 'form-control mb-3 mb-3'}) %>
-          </div>
+          </div> -->
 	      <div class="form-group">       
 	        <%= t.submit "Salvar", class: "btn btn-primary" %>
 	      </div>
