--- a/app/views/backoffice/config/user/new.html.erb
+++ b/app/views/backoffice/config/user/new.html.erb
@@ -51,11 +51,14 @@
 			  </div>
 			 <% end %>
 			</div>
-            <div class="form-group">
-               <%= t.label "Site", class: "form-control-label" %>   
-               <%= t.collection_select( :site_id, @sites, :id, :name, 
-               {:include_blank=>false}, {:class=> 'form-control mb-3 mb-3'}) %>
-            </div>
+            <div class="form-group" style="display: none">
+            <%= t.text_field :site_id,  :value => current_user.site_id %>
+		    </div>
+		     <!-- <div class="form-group">
+	            <%= t.label "Site", class: "form-control-label" %>   
+	            <%= t.collection_select( :site_id, @sites, :id, :name, 
+	            {:include_blank=>false}, {:class=> 'form-control mb-3 mb-3'}) %>
+	          </div> -->
 	        <div class="form-group">       
 	         <%= t.submit "Salvar", class: "btn btn-primary" %>
 	        </div>
